Replace div to figure + figcaption

--- a/index.html
+++ b/index.html
@@ -91,34 +91,34 @@
       <div class="review-wrp padding-side bg-grey">
         <h3 class="cnt-title">Reviews</h3>
         <div class="review-list">
-          <div class="review-item">
+          <figure class="review-item">
             <img src="img/userpic_176.png" alt="review-image" height="75">
-            <div class="review-item-text-wrp">
+            <figcaption class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <a class="review-item-subtext">Lourens S.</a>
-            </div>
-          </div>
-          <div class="review-item">
+            </figcaption>
+          </figure>
+          <figure class="review-item">
             <img src="img/userpic_176.png" alt="review-image" height="75">
-            <div class="review-item-text-wrp">
+            <figcaption class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <a class="review-item-subtext">Lourens S.</a>
-            </div>
-          </div>
-          <div class="review-item">
+            </figcaption>
+          </figure>
+          <figure class="review-item">
             <img src="img/userpic_176.png" alt="review-image" height="75">
-            <div class="review-item-text-wrp">
+            <figcaption class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <a class="review-item-subtext">Lourens S.</a>
-            </div>
-          </div>
-          <div class="review-item">
+            </figcaption>
+          </figure>
+          <figure class="review-item">
             <img src="img/userpic_176.png" alt="review-image" height="75">
-            <div class="review-item-text-wrp">
+            <figcaption class="review-item-text-wrp">
               <p class="review-item-text">Porro officia cumque sint deleniti nemo facere rem vitae odit inventore cum odio, iste quia doloribus autem aperiam nulla ea neque reprehenderit. Libero doloribus, possimus officiis sapiente necessitatibus commodi consectetur?</p>
               <a class="review-item-subtext">Lourens S.</a>
-            </div>
-          </div>
+            </figcaption>
+          </figure>
         </div>
       </div>
       <div class="buy-wrp padding-side bg-white">
